--- a/examples/train_and_evaluate.ipynb
+++ b/examples/train_and_evaluate.ipynb
@@ -379,6 +379,7 @@
     "                                'low': 'Low', \n",
     "                                'close': 'Close', \n",
     "                                'volume': 'Volume'})\n",
+    "    \n",
     "    data = data.set_index('date')\n",
     "\n",
     "    # Custom indicators\n",
@@ -3623,7 +3624,7 @@
     }
    ],
    "source": [
-    "env.observer.feed.next()"
+    "# env.observer.feed.next()"
    ]
   },
   {
